--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: testing pages
-description: updates inc
+title: Corner of the internet
+description: Testing Space
